# poets-types

./: .gitignore  poets-types.cabal
app/: Main.hs
doc/: feasibility.md  graph.md  messages.md
src/: Poets-less-old.hs  Poets-type-families.hs  Poets.hs
