name:                poets-types
version:             0.1.0.0
synopsis:            POETS datatypes in Haskell
description:         Please see README.md
homepage:            https://github.com/snowleopard/poets-types
license:             MIT
license-file:        LICENSE
author:              Andrey Mokhov
maintainer:          andrey.mokhov@gmail.com
copyright:           2016 Andrey Mokhov
category:            Hardware
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Poets
  build-depends:       array >= 0.5.1
                     , base >= 4.7 && < 5
                     , containers >= 0.5.6
                     , extra >= 1.4.10
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

executable poets-types-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , poets-types
  default-language:    Haskell2010

test-suite poets-types-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , poets-types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/poets-types
